fix mobile sidebar overflow issue
Closes #9828

--- a/src/components/sidebar/style.module.scss
+++ b/src/components/sidebar/style.module.scss
@@ -1,12 +1,8 @@
 // the checkbox controls the sidebar visibility on mobile
 // otherwise it's always visible on desktop
-@media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 768px) {
   .sidebar:has(> #navbar-menu-toggle:checked) {
     display: flex;
-
-    &+ :global(.main-content) {
-      margin-left: var(--sidebar-width);
-    }
   }
 
   .sidebar:has(> #navbar-menu-toggle:not(:checked)) {
@@ -36,6 +32,9 @@
     width: 300px;
     height: calc(100vh - var(--header-height, 80px));
     display: flex;
+    &+ :global(.main-content) {
+      margin-left: var(--sidebar-width);
+    }
   }
 
   ul+hr {
